Fixed some crashes and added a start/continue button so you don't have to scroll to the last chapter